--- a/index.html
+++ b/index.html
@@ -488,9 +488,31 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#section-deployment-view">7. Deployment View</a>
 <ul class="sectlevel2">
 <li><a href="#_infrastructure_level_1">7.1. Infrastructure Level 1</a></li>
+<li><a href="#_motivation_6">7.2. Motivation:</a></li>
+<li><a href="#_quality_andor_performance_features">7.3. Quality and/or Performance Features::</a></li>
+<li><a href="#_mapping_of_building_blocks_to_infrastructure">7.4. Mapping of Building Blocks to Infrastructure::</a></li>
 </ul>
 </li>
-<li><a href="#section-glossary">8. Glossary</a></li>
+<li><a href="#section-concepts">8. Cross-cutting Concepts</a>
+<ul class="sectlevel2">
+<li><a href="#_domain_model">8.1. <em>Domain Model</em></a></li>
+<li><a href="#_security">8.2. <em>Security</em></a></li>
+<li><a href="#_privacy">8.3. <em>Privacy</em></a></li>
+</ul>
+</li>
+<li><a href="#section-design-decisions">9. Architecture Decisions</a></li>
+<li><a href="#section-quality-scenarios">10. Quality Requirements</a>
+<ul class="sectlevel2">
+<li><a href="#_quality_scenarios">10.1. Quality Scenarios</a></li>
+</ul>
+</li>
+<li><a href="#section-technical-risks">11. Risks and Technical Debts</a>
+<ul class="sectlevel2">
+<li><a href="#_risks">11.1. Risks</a></li>
+<li><a href="#_technical_debts">11.2. Technical debts</a></li>
+</ul>
+</li>
+<li><a href="#section-glossary">12. Glossary</a></li>
 </ul>
 </div>
 </div>
@@ -821,7 +843,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <h4 id="_context_diagram">3.2.4. Context diagram</h4>
 <div class="imageblock">
 <div class="content">
-<img src="./images/context.png" alt="context" width="1017" height="578">
+<img src="./images/context.png" alt="context" width="1043" height="578">
 </div>
 </div>
 <hr>
@@ -847,7 +869,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <h4 id="_deployment_diagram">3.3.2. Deployment diagram</h4>
 <div class="imageblock">
 <div class="content">
-<img src="./images/deployment.png" alt="deployment" width="1040" height="578">
+<img src="./images/deployment.png" alt="deployment" width="1053" height="578">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -858,7 +880,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <div class="sect1">
 <h2 id="section-solution-strategy">4. Solution Strategy</h2>
 <div class="sectionbody">
-<div class="sect2 arc42help">
+<div class="sect2">
 <h3 id="_contents_4">4.1. Contents</h3>
 <div class="paragraph">
 <p>This page contains a short summary and explanation of the fundamental decisions and solution strategies, that shape system architecture.</p>
@@ -1036,7 +1058,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <h3 id="_level_1_whitebox_of_the_overall_system">5.1. Level 1: Whitebox of the Overall System</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/level1.png" alt="level1" width="1014" height="578">
+<img src="./images/level1.png" alt="level1" width="1017" height="578">
 </div>
 </div>
 <div class="sect3">
@@ -1079,7 +1101,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <h3 id="_level_2">5.2. Level 2</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/level2.png" alt="level2" width="1043" height="578">
+<img src="./images/level2.png" alt="level2" width="1031" height="578">
 </div>
 </div>
 <div class="sect3">
@@ -1122,7 +1144,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <h3 id="_level_3">5.3. Level 3</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/level3.png" alt="level3" width="1016" height="578">
+<img src="./images/level3.png" alt="level3" width="1009" height="578">
 </div>
 </div>
 <div class="sect3">
@@ -1262,34 +1284,29 @@ In case the login isn&#8217;t succesfully, a warning message is shown.</p>
 <div class="sect1">
 <h2 id="section-deployment-view">7. Deployment View</h2>
 <div class="sectionbody">
-<div class="sidebarblock arc42help">
-<div class="content">
-
-</div>
-</div>
 <div class="sect2">
 <h3 id="_infrastructure_level_1">7.1. Infrastructure Level 1</h3>
-<div class="sidebarblock arc42help">
-<div class="content">
 <div class="imageblock text-center">
 <div class="content">
 <a class="image" href=""Diag_Comp.jpg"><img src="./images/Diag_Comp.jpg" alt="Diag Comp"></a>
 </div>
 <div class="title">Figure 1. Deployment Diagram</div>
 </div>
-<div class="dlist">
-<dl>
-<dt class="hdlist1">Motivation</dt>
-<dd>
-<p>The system is based in microservices architecture with three independent services, each responsible for a specific aspect of the functionality. One service is the Graphic interface, this service handles the presentation layer of a web application. Another service is tasked with managing user-related functionalities. MongoDB, a NoSQL database, is used to store and manage user data efficiently. The third service utilizes Wikidata, a free open base, to automatically generate questions.</p>
-</dd>
-<dt class="hdlist1">Quality and/or Performance Features</dt>
-<dd>
-<p>The main reason we have chosen a microservices architecture is to achieve a fast and efficient application.. The availability and efficiency of the application will be affected by Wikidata&#8217;s availability, but just in the question generation moment.</p>
-</dd>
-<dt class="hdlist1">Mapping of Building Blocks to Infrastructure</dt>
-</dl>
 </div>
+<div class="sect2">
+<h3 id="_motivation_6">7.2. Motivation:</h3>
+<div class="paragraph">
+<p>The system is based in microservices architecture with three independent services, each responsible for a specific aspect of the functionality. One service is the Graphic interface, this service handles the presentation layer of a web application. Another service is tasked with managing user-related functionalities. MongoDB, a NoSQL database, is used to store and manage user data efficiently. The third service utilizes Wikidata, a free open base, to automatically generate questions.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_quality_andor_performance_features">7.3. Quality and/or Performance Features::</h3>
+<div class="paragraph">
+<p>The main reason we have chosen a microservices architecture is to achieve a fast and efficient application.. The availability and efficiency of the application will be affected by Wikidata&#8217;s availability, but just in the question generation moment.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_mapping_of_building_blocks_to_infrastructure">7.4. Mapping of Building Blocks to Infrastructure::</h3>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 33.3333%;">
@@ -1333,44 +1350,36 @@ In case the login isn&#8217;t succesfully, a warning message is shown.</p>
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
-<div id="section-concepts" class="paragraph">
-<p>== Cross-cutting Concepts</p>
 </div>
 </div>
 </div>
-<div class="sidebarblock">
-<div class="content">
-<div class="paragraph">
-<p>=== <em>Domain Model</em></p>
-</div>
+<div class="sect1">
+<h2 id="section-concepts">8. Cross-cutting Concepts</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_domain_model">8.1. <em>Domain Model</em></h3>
 <div class="paragraph">
 <p><em>TBD</em></p>
 </div>
-<div class="paragraph">
-<p>=== <em>Security</em></p>
 </div>
+<div class="sect2">
+<h3 id="_security">8.2. <em>Security</em></h3>
 <div class="paragraph">
 <p><em>The communication between the application&#8217;s APIs will be through the secure mode of HTTP.</em></p>
 </div>
-<div class="paragraph">
-<p>=== <em>Privacy</em></p>
 </div>
+<div class="sect2">
+<h3 id="_privacy">8.3. <em>Privacy</em></h3>
 <div class="paragraph">
 <p><em>The user&#8217;s data will be stored in a MongoDb database. That implies that the information is stored securely.</em></p>
 </div>
-<div class="paragraph">
-<p>&#8230;&#8203;</p>
-</div>
-<div class="paragraph">
-<p>=== <em>&lt;Concept n&gt;</em></p>
-</div>
-<div class="paragraph">
-<p><em>&lt;explanation&gt;</em></p>
-</div>
 <div style="page-break-after: always;"></div>
-<div id="section-design-decisions" class="paragraph">
-<p>== Architecture Decisions</p>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="section-design-decisions">9. Architecture Decisions</h2>
+<div class="sectionbody">
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 33.3333%;">
@@ -1402,22 +1411,19 @@ In case the login isn&#8217;t succesfully, a warning message is shown.</p>
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
-<div id="section-quality-scenarios" class="paragraph">
-<p>== Quality Requirements</p>
 </div>
 </div>
-</div>
+<div class="sect1">
+<h2 id="section-quality-scenarios">10. Quality Requirements</h2>
+<div class="sectionbody">
 <div class="imageblock">
 <div class="content">
 <img src="./images/10-Quality_Tree.png" alt="Quality Tree">
 </div>
 <div class="title">Figure 2. Quality Tree</div>
 </div>
-<div class="sidebarblock">
-<div class="content">
-<div class="paragraph">
-<p>=== Quality Scenarios</p>
-</div>
+<div class="sect2">
+<h3 id="_quality_scenarios">10.1. Quality Scenarios</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -1485,10 +1491,14 @@ In case the login isn&#8217;t succesfully, a warning message is shown.</p>
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
-<div id="section-technical-risks" class="paragraph">
-<p>== Risks and Technical Debts
-=== Risks</p>
 </div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="section-technical-risks">11. Risks and Technical Debts</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_risks">11.1. Risks</h3>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 33.3333%;">
@@ -1519,9 +1529,9 @@ In case the login isn&#8217;t succesfully, a warning message is shown.</p>
 </tr>
 </tbody>
 </table>
-<div class="paragraph">
-<p>=== Technical debts</p>
 </div>
+<div class="sect2">
+<h3 id="_technical_debts">11.2. Technical debts</h3>
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
 <col style="width: 33.3333%;">
@@ -1540,14 +1550,12 @@ In case the login isn&#8217;t succesfully, a warning message is shown.</p>
 </tr>
 </tbody>
 </table>
-</div>
-</div>
 <div style="page-break-after: always;"></div>
 </div>
 </div>
 </div>
 <div class="sect1">
-<h2 id="section-glossary">8. Glossary</h2>
+<h2 id="section-glossary">12. Glossary</h2>
 <div class="sectionbody">
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
