--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 </div>
 <div class="sect2">
 <h3 id="_business_context">3.2. Business Context</h3>
-<div class="sect3 arc42help">
+<div class="sect3">
 <h4 id="_contents_2">3.2.1. Contents</h4>
 <div class="ulist">
 <ul>
@@ -843,7 +843,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <h4 id="_context_diagram">3.2.4. Context diagram</h4>
 <div class="imageblock">
 <div class="content">
-<img src="./images/context.png" alt="context" width="1043" height="578">
+<img src="./images/context.png" alt="Context">
 </div>
 </div>
 <hr>
@@ -851,7 +851,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 </div>
 <div class="sect2">
 <h3 id="_technical_context">3.3. Technical Context</h3>
-<div class="sect3 arc42help">
+<div class="sect3">
 <h4 id="_contents_3">3.3.1. Contents</h4>
 <div class="ulist">
 <ul>
@@ -869,7 +869,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <h4 id="_deployment_diagram">3.3.2. Deployment diagram</h4>
 <div class="imageblock">
 <div class="content">
-<img src="./images/deployment.png" alt="deployment" width="1053" height="578">
+<img src="./images/deployment.png" alt="Deployment">
 </div>
 </div>
 <div style="page-break-after: always;"></div>
@@ -1058,7 +1058,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <h3 id="_level_1_whitebox_of_the_overall_system">5.1. Level 1: Whitebox of the Overall System</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/level1.png" alt="level1" width="1017" height="578">
+<img src="./images/level1.png" alt="Level 1">
 </div>
 </div>
 <div class="sect3">
@@ -1101,7 +1101,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <h3 id="_level_2">5.2. Level 2</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/level2.png" alt="level2" width="1031" height="578">
+<img src="./images/level2.png" alt="Level 2">
 </div>
 </div>
 <div class="sect3">
@@ -1144,7 +1144,7 @@ The main constraints are developing the game as a web app and using Wikidata to 
 <h3 id="_level_3">5.3. Level 3</h3>
 <div class="imageblock">
 <div class="content">
-<img src="./images/level3.png" alt="level3" width="1009" height="578">
+<img src="./images/level3.png" alt="Level 3">
 </div>
 </div>
 <div class="sect3">
