--- a/index.html
+++ b/index.html
@@ -1683,13 +1683,19 @@ The application can be deployed at any time locally or in an environment such as
 </tr>
 </tbody>
 </table>
+<div style="page-break-after: always;"></div>
+<div class="literalblock">
+<div class="content">
+<pre>include::src/12_testing.adoc[]</pre>
+</div>
+</div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
 Version 8.2 EN<br>
-Last updated 2024-04-07 12:34:40 +0200
+Last updated 2024-04-28 02:01:46 +0200
 </div>
 </div>
 </body>
