--- a/index.html
+++ b/index.html
@@ -522,14 +522,14 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_technical_debts">12.2. Technical debts</a></li>
 </ul>
 </li>
-<li><a href="#_testing_2">Testing</a>
-<ul class="sectlevel1">
-<li><a href="#_unit_tests">1. Unit Tests</a></li>
-<li><a href="#_acceptance_tests">2. Acceptance Tests</a></li>
-<li><a href="#_load_and_stress_tests">3. Load and stress tests</a></li>
-<li><a href="#section-glossary">4. Glossary</a></li>
+<li><a href="#_testing_2">13. Testing</a>
+<ul class="sectlevel2">
+<li><a href="#_unit_tests">13.1. Unit Tests</a></li>
+<li><a href="#_acceptance_tests">13.2. Acceptance Tests</a></li>
+<li><a href="#_load_and_stress_tests">13.3. Load and stress tests</a></li>
 </ul>
 </li>
+<li><a href="#section-glossary">14. Glossary</a></li>
 </ul>
 </div>
 </div>
@@ -1637,18 +1637,17 @@ The application can be deployed at any time locally or in an environment such as
 </div>
 </div>
 </div>
-<h1 id="_testing_2" class="sect0">Testing</h1>
 <div class="sect1">
-<h2 id="_unit_tests">1. Unit Tests</h2>
+<h2 id="_testing_2">13. Testing</h2>
 <div class="sectionbody">
+<div class="sect2">
+<h3 id="_unit_tests">13.1. Unit Tests</h3>
 <div class="paragraph">
 <p>Unit tests are used to test individual units of code, such as functions or methods. They are typically written by developers to ensure that each unit of code behaves as expected. In the context of microservices, unit tests can be used to verify the functionality of each microservice. To reduce the possibility of errors that are not due to the microservice being tested, any dependencies that the microservice calls can be mocked.</p>
 </div>
 </div>
-</div>
-<div class="sect1">
-<h2 id="_acceptance_tests">2. Acceptance Tests</h2>
-<div class="sectionbody">
+<div class="sect2">
+<h3 id="_acceptance_tests">13.2. Acceptance Tests</h3>
 <div class="paragraph">
 <p>Acceptance tests allow us to evaluate the functionality of the graphical part of the application by simulating the behaviour that a user would have.</p>
 </div>
@@ -1695,10 +1694,8 @@ The application can be deployed at any time locally or in an environment such as
 </tbody>
 </table>
 </div>
-</div>
-<div class="sect1">
-<h2 id="_load_and_stress_tests">3. Load and stress tests</h2>
-<div class="sectionbody">
+<div class="sect2">
+<h3 id="_load_and_stress_tests">13.3. Load and stress tests</h3>
 <div class="paragraph">
 <p>Load and stress tests allow us to evaluate the behavior of the system under different numbers of users and specific conditions. Load tests test the system&#8217;s performance with varying user loads, while stress tests push the system to its limits under extreme conditions.</p>
 </div>
@@ -1739,8 +1736,9 @@ The application can be deployed at any time locally or in an environment such as
 <div style="page-break-after: always;"></div>
 </div>
 </div>
+</div>
 <div class="sect1">
-<h2 id="section-glossary">4. Glossary</h2>
+<h2 id="section-glossary">14. Glossary</h2>
 <div class="sectionbody">
 <table class="tableblock frame-all grid-all stretch">
 <colgroup>
