--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#_technical_debts">12.2. Technical debts</a></li>
 </ul>
 </li>
-<li><a href="#_testing_2">13. Testing</a>
+<li><a href="#section-testing">13. Testing</a>
 <ul class="sectlevel2">
 <li><a href="#_unit_tests">13.1. Unit Tests</a></li>
 <li><a href="#_acceptance_tests">13.2. Acceptance Tests</a></li>
@@ -1638,7 +1638,7 @@ The application can be deployed at any time locally or in an environment such as
 </div>
 </div>
 <div class="sect1">
-<h2 id="_testing_2">13. Testing</h2>
+<h2 id="section-testing">13. Testing</h2>
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_unit_tests">13.1. Unit Tests</h3>
