--- a/index.html
+++ b/index.html
@@ -1643,7 +1643,7 @@ The application can be deployed at any time locally or in an environment such as
 <div class="sect2">
 <h3 id="_unit_tests">13.1. Unit Tests</h3>
 <div class="paragraph">
-<p>Unit tests are used to test individual units of code, such as functions or methods. They are typically written by developers to ensure that each unit of code behaves as expected. In the context of microservices, unit tests can be used to verify the functionality of each microservice. To reduce the possibility of errors that are not due to the microservice being tested, any dependencies that the microservice calls can be mocked.</p>
+<p>Unit tests are used to test individual units of code, such as functions or methods. In the context of microservices, unit tests can be used to verify the functionality of each microservice. To reduce the possibility of errors that are not due to the microservice being tested, any dependencies that the microservice calls can be mocked.</p>
 </div>
 </div>
 <div class="sect2">
